Internal
PiperOrigin-RevId: 941148079